<resources>
    <string name="app_name">Meu Portfolio de Apps</string>
    <string name="my_apps">Meus Apps Nanodegree</string>
    <string name="popular_movies">Filmes populares</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Faça-o maior</string>
    <string name="make_your_app_material">Faça seu aplicativo com Material </string>
    <string name="go_ubiquitous">Seja onipresente</string>
    <string name="capstone">Capstone</string>
    <string name="openApp">Abrir o app \'%s\'</string>
</resources>
